--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,10 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+  height: 70px;
+  line-height: 70px;
+  margin-bottom: 20px;
 }
 
 .App-title {
@@ -26,7 +27,6 @@
 .buttonsList {
   list-style: none;
   padding: 0px;
-  margin: 30px 0px 30px 0px;
 
 }
 
@@ -102,4 +102,15 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.errorCard {
+  text-align: center;
+  margin-top:30px;
+}
+
+.customError {
+  height: 200px;
+  width: 600px;
+  cursor: pointer;
 }
