--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,6 @@
 .buttonsList {
   list-style: none;
   padding: 0px;
-
 }
 
 .buttonsList li {
@@ -49,7 +48,7 @@
   width: 1123px;
 }
 
-.screen{
+.screen {
   position: absolute;
   border: 1px solid green;
   top: 41px;
@@ -67,12 +66,12 @@
   outline: none;
 }
 
-.animateScreen-out{
-  opacity: 0.0
+.animateScreen-out {
+  opacity: 0;
 }
 
 .animateScreen-in {
-  transition:2s;
+  transition: 2s;
   opacity: 1;
 }
 .cardPortal {
@@ -90,7 +89,7 @@
   background-repeat: no-repeat;
 }
 
-.quote{
+.quote {
   margin-top: 30px;
   display: inline-block;
   vertical-align: top;
@@ -101,17 +100,62 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .errorCard {
   text-align: center;
-  margin-top:30px;
+  margin-top: 30px;
 }
 
 .customError {
   height: 200px;
   width: 600px;
   cursor: pointer;
+}
+
+.samanageWelcome {
+  border: 3px solid #1b1e21;
+  border-radius: 10px;
+  background-image: url(/static/media/sw.39b57b5d.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 312px;
+  margin-top: 80px;
+  width: 495px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.samanageWelcome .text {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  font-size: 34px;
+  text-transform: uppercase;
+  text-shadow: 4px 3px #1e4d7e;
+  font-family: sans-serif;
+  bottom: -70px;
+}
+
+.myBounceDiv {
+  -webkit-animation: bounce 4s linear;
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: scale(0);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    opacity: 1;
+  }
 }
