--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@
 .samanageWelcome {
   border: 3px solid #1b1e21;
   border-radius: 10px;
-  background-image: url(/static/media/sw.39b57b5d.png);
+  background-image: url(../src/sw.png);
   background-repeat: no-repeat;
   background-position: center;
   height: 312px;
